# self-evolving-brain

./: .dockerignore  .gitignore  Cargo.toml  PUBLISH.md  docker-compose.yml  sources.json
brain-api/: Cargo.toml  Dockerfile
brain-api/src/: main.rs
brain-cache/: Cargo.toml
brain-cache/src/: l1_moka.rs  l2_redis.rs  lib.rs
brain-core/: Cargo.toml
brain-core/src/: lib.rs  source_manager.rs
brain-core/src/db/: mod.rs
brain-core/src/models/: mod.rs
brain-ingestion/: Cargo.toml  Dockerfile
brain-ingestion/src/: intelligence.rs  main.rs
brain-ingestion/src/consolidation/: mod.rs
brain-ingestion/src/fact_checker/: mod.rs
brain-ingestion/src/queue/: consumer.rs  mod.rs  producer.rs
brain-ingestion/src/sources/: mod.rs
brain-ingestion/src/sources/google/: mod.rs
brain-ingestion/src/sources/news/: mod.rs
brain-ui/: Dockerfile.prod  index.html  package-lock.json  package.json
brain-ui/src/: App.tsx
