[package]
name = "brain-api"
version = "0.1.0"
edition = "2021"

[dependencies]
brain-core = { path = "../brain-core" }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4", features = ["cors"] }
anyhow = "1.0"
dotenv = "0.15"
urlencoding = "2.1.3"
