[package]
name = "brain-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
moka = { version = "0.12", features = ["future"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
