[package]
name = "brain-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
brain-core = { path = "../brain-core" }
brain-cache = { path = "../brain-cache" }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
feed-rs = "1.3"
# Google API dependencies
google-gmail1 = "5.0"
google-calendar3 = "5.0"
google-apis-common = "6.0"
hyper = "0.14"
hyper-rustls = "0.24"
futures = "0.3.32"
lingua = "1.8.0"
# No top-level yup-oauth2 to avoid conflict
